# slides-it

./: .gitignore  LICENSE  README.md  build.sh  install.sh  main.py  pyproject.toml  registry.json  todo.md
.github/workflows/: release-test.yml  release.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AtPopover.tsx  ChatPanel.tsx  FileTree.tsx  MarkdownRenderer.tsx  ModelModal.tsx  PreviewPanel.tsx  QuestionBlock.tsx  SettingsModal.tsx  TemplatesModal.tsx  ThinkingDots.tsx  TitleBar.tsx  ToolBlock.tsx  WorkspaceSelector.tsx
frontend/src/lib/: opencode-api.ts  slides-server-api.ts  typewriter.ts
slides_it/: cli.py  server.py  templates.py
slides_it/skill/: SKILL.md
