[project]
name = "slides-it"
version = "1.0.2"
description = "AI-powered HTML presentation generator built on OpenCode"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.27",
    "python-multipart>=0.0.22",
    "typer>=0.12",
    "uvicorn>=0.42.0",
]

[project.scripts]
slides-it = "slides_it.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slides_it"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]
